Task #8 : Added BMR calculator tests + some refactor